--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,18 @@
+astroid==1.6.1
+colorama==0.3.9
 Django==1.11.3
 django-coverage==1.2.4
+djangorestframework==3.7.7
+djangorestframework-jwt==1.11.0
+isort==4.3.4
+lazy-object-proxy==1.3.1
+mccabe==0.6.1
 psycopg2==2.7.1
+PyJWT==1.6.1
 pylint==1.7.2
 pylint-django==0.7.2
 pylint-plugin-utils==0.2.6
+pytz==2018.3
 PyYAML==3.12
-
+six==1.11.0
+wrapt==1.10.11
